# haskell

./: examples.hs
advent2020/21day16/: 21day16.cabal  CHANGELOG.md
advent2020/21day16/app/: Main.hs
advent2020/day1/: day1.cabal
advent2020/day1/app/: Main.hs  Main2.hs
advent2020/day2/: day2.cabal
advent2020/day2/app/: Main.hs
advent2020/day3/: day3.cabal
advent2020/day3/app/: Main.hs
advent2020/day4/: day4.cabal
advent2020/day4/app/: Main.hs
advent2020/day5/: CHANGELOG.md  day5.cabal
advent2020/day5/app/: Main.hs
advent2020/day6/: day6.cabal
advent2020/day6/app/: Main.hs
advent2022/day1/: day1.cabal
advent2022/day1/app/: Main.hs
ex01e01/: .gitignore  ex01e01.cabal
ex01e01/app/: Main.hs
ex01e02/: ex01e02.cabal
ex01e02/app/: Main.hs
ex01e03/: CHANGELOG.md  ex01e03.cabal
exam/question-template/: CHANGELOG.md  question-template.cabal
exam/question-template/app/: Main.hs  Parser.hs  Question1.hs  Question2.hs
exam/task-template/: Dockerfile  LOG.md  README.md  ohhell.cabal  stack.yaml
exam/task-template/src/: Cards.hs  Game.hs  Gameplay.hs  M3546130.hs  Main.hs  MyStrategy.hs  Shuffle.hs  Tests.hs  Tournament.hs
exercises/ex01/ex01e01/: CHANGELOG.md
exercises/ex01/ex01e02/: CHANGELOG.md
exercises/ex01e01/app/: Main.hs
exercises/ex01e02/: LICENSE
exercises/ex03/: ex03e02.xoj  ex03e04.xoj
exercises/ex03/ex03e03/: CHANGELOG.md  ex03e03.cabal
exercises/ex03/ex03e03/app/: BoolTerm.hs  Main.hs
exercises/ex09/: CHANGELOG.md  ex09.cabal
exercises/ex09/app/: Main.hs
exercises/ex10/: CHANGELOG.md  ex10.cabal
exercises/ex11/: CHANGELOG.md  ex11.cabal
exercises/ex12/: CHANGELOG.md  ex12.cabal
exercises/ex13/: CHANGELOG.md  ex13.cabal
lectures/: 00-intro.pdf.xoj  01-starting-haskell.pdf.xoj  03-haskell-types.pdf.xoj  04-define-types.pdf.xoj  05-more-about-lists.pdf.xoj  06-higher-order.pdf.xoj  06a-slides-20221102-terms.pdf.xoj  07-laziness.pdf.xoj  07-slides-20221102-terms.pdf.xoj  08-type-classes.pdf.xoj  09-io.pdf.xoj  09functionaldata.pdf.xoj  10-test-data-generators.pdf.xoj  11-monadic-interpreter.pdf.xoj  12-functors-applicatives.pdf.xoj  15-lambda-calculus.pdf.xoj
lectures/V03/: CHANGELOG.md  V03.cabal
lectures/V04/: CHANGELOG.md  V04.cabal
lectures/V05/: CHANGELOG.md  V05.cabal
lectures/V06/: CHANGELOG.md  V06.cabal
lectures/V08/: CHANGELOG.md  V08.cabal
lectures/V11/: CHANGELOG.md  V11.cabal
lectures/V13/: CHANGELOG.md  V13.cabal
lectures/V15/: CHANGELOG.md  V15.cabal
lectures/V16/: CHANGELOG.md  V16.cabal
lectures/V17/: CHANGELOG.md  V17.cabal
memo/: CHANGELOG.md  memo.cabal
memo/app/: Main.hs
mistlabyrinth/: CHANGELOG.md  mistlabyrinth.cabal
mistlabyrinth/app/: Input.hs  Lab.hs  Main.hs
test/: test.cabal
test/app/: Main.hs
wiki/: temp.htm  wiki.cabal
wiki/app/: Main.hs
(+75 files in other folders)
