cabal-version:      3.0
name:               ex01e01
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Michael Steinle
maintainer:         michael.steinle@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable ex01e01
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.16.0.0,
        QuickCheck
    hs-source-dirs:   app
    default-language: Haskell2010
