name:                ohhell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/funktionale-programmierung/hearts/
license:             BSD3
license-file:        LICENSE
author:              Peter Thiemann, Mike Sperber, Vanessa Stoeckl
maintainer:          peter.thiemann@gmail.com
copyright:           2018, 2021 Peter Thiemann
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ohhell
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Cards Game Shuffle Gameplay MyStrategy Tournament M3546130
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random, transformers, mtl, containers, free, cond, split
                     , optparse-applicative
                     , split, optparse-applicative, unicode-show

executable test
  hs-source-dirs:      src
  main-is:             Tests.hs
  other-modules:       Cards Game Shuffle Gameplay MyStrategy Tournament M3546130
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random, transformers, mtl, containers, free, cond, split
                     , optparse-applicative
                     , split, optparse-applicative, unicode-show